# stackbaker

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wdio.conf.ts
.github/workflows/: publish.yml  test-on-pr.yml
src/: App.tsx  AppSkeleton.tsx  Dashboard.tsx  DashboardTypes.ts  DayCalendar.tsx  Item.tsx  List.tsx  Planner.tsx  Root.tsx  Task.tsx  TaskList.tsx  coordinateBackendAndState.ts  coordinateBackendAndState.tsx  dateutils.ts  globals.ts  main.tsx  paths.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Authentication/: LoginSequence.tsx  authenticate.ts
src/Calendars/: DayCalEditEventModal.tsx  DayCalendar.tsx  Event.ts  Event.tsx  GridCalendar.tsx  fullcalendar-vars.css
src/Dashboard/: ActionArea.tsx  Dashboard.tsx  DashboardLeftPanel.tsx  DashboardMain.tsx  LeftPanel.tsx
src/Persistence/: dbutils.ts  testListDB.ts  useDatabase.ts  useEventDB.ts  useItemDB.ts  useListDB.ts  useUserDB.ts
src/Planner/: Planner.tsx  PlannerLeftPanel.tsx  PlannerMain.tsx  planner.css  plannerutils.ts
test/: test.js
